Initial commit of PWA radio app files

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <h1>Музыкальный КЛЮЧ</h1>
-        <audio id="audioPlayer" src="https - FORBIDDEN - stream.radioscan - FORBIDDEN - /jazzblues" preload="auto"></audio>
+        <audio id="audioPlayer" src="https://myradio24.org/52340" preload="auto"></audio>
         <div class="controls">
             <button id="playPauseButton">Включить Радио</button>
         </div>
